--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
     
     <table>
 
-        <tr><td colspan="6"><h1>Sarah Pasquale - Class Schedule</h1></td></tr>
+        <tr><td colspan="6" class="title"><h1>Sarah Pasquale - Class Schedule</h1></td></tr>
         
         <tr>
-            <th></th>
+            <th class="col1"></th>
             <th>Mon</th>
             <th>Tues</th>
             <th>Wed</th>
@@ -39,7 +39,7 @@
         </tr>
 
         <tr>
-            <td>8:00 AM</td>
+            <th class="col1">8:00 AM</th>
             <td></td>
             <td></td>
             <td></td>
@@ -48,7 +48,7 @@
         </tr>
 
         <tr>
-            <td>8:30 AM</td>
+            <th class="col1">8:30 AM</th>
             <td></td>
             <td></td>
             <td></td>
@@ -57,46 +57,22 @@
         </tr>
 
         <tr>
-            <td>9:00 AM</td>
-            <td rowspan="2">Website Development I</td>
+            <th class="col1">9:00 AM</th>
+            <td rowspan="2" class="web">Website Development I</td>
             <td></td>
-            <td rowspan="2">Website Development I</td>
+            <td rowspan="2" class="web">Website Development I</td>
             <td></td>
-            <td rowspan="2">Website Development I</td>
+            <td rowspan="2" class="web">Website Development I</td>
         </tr>
 
         <tr>
-            <td>9:30 AM</td>
-            <td></td>
-            <td></td>
-        </tr>
-
-        <tr>
-            <td>10:00 AM</td>
-            <td></td>
-            <td></td>
-            <td></td>
+            <th class="col1">9:30 AM</th>
             <td></td>
             <td></td>
         </tr>
 
         <tr>
-            <td>10:30 AM</td>
-            <td rowspan="2">Java Programming I</td>
-            <td></td>
-            <td rowspan="2">Java Programming I</td>
-            <td></td>
-            <td rowspan="2">Java Programming I</td>
-        </tr>
-
-        <tr>
-            <td>11:00 AM</td>
-            <td></td>
-            <td></td>
-        </tr>
-
-        <tr>
-            <td>11:30 AM</td>
+            <th class="col1">10:00 AM</th>
             <td></td>
             <td></td>
             <td></td>
@@ -105,30 +81,22 @@
         </tr>
 
         <tr>
-            <td>12:00 PM</td>
+            <th class="col1">10:30 AM</th>
+            <td rowspan="2" class="java">Java Programming I</td>
             <td></td>
-            <td rowspan="3">Calculus II</td>
+            <td rowspan="2" class="java">Java Programming I</td>
             <td></td>
-            <td rowspan="3">Calculus II</td>
-            <td></td>
+            <td rowspan="2" class="java">Java Programming I</td>
         </tr>
 
         <tr>
-            <td>12:30 PM</td>
-            <td></td>
-            <td></td>
-            <td></td>
-        </tr>
-
-        <tr>
-            <td>1:00 PM</td>
-            <td></td>
+            <th class="col1">11:00 AM</th>
             <td></td>
             <td></td>
         </tr>
 
         <tr>
-            <td>1:30 PM</td>
+            <th class="col1">11:30 AM</th>
             <td></td>
             <td></td>
             <td></td>
@@ -137,7 +105,30 @@
         </tr>
 
         <tr>
-            <td>2:00 PM</td>
+            <th class="col1">12:00 PM</th>
+            <td></td>
+            <td rowspan="3" class="calc">Calculus II</td>
+            <td></td>
+            <td rowspan="3" class="calc">Calculus II</td>
+            <td></td>
+        </tr>
+
+        <tr>
+            <th class="col1">12:30 PM</th>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+
+        <tr>
+            <th class="col1">1:00 PM</th>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+
+        <tr>
+            <th class="col1">1:30 PM</th>
             <td></td>
             <td></td>
             <td></td>
@@ -146,7 +137,7 @@
         </tr>
 
         <tr>
-            <td>2:30 PM</td>
+            <th class="col1">2:00 PM</th>
             <td></td>
             <td></td>
             <td></td>
@@ -155,7 +146,7 @@
         </tr>
 
         <tr>
-            <td>3:00 PM</td>
+            <th class="col1">2:30 PM</th>
             <td></td>
             <td></td>
             <td></td>
@@ -164,7 +155,7 @@
         </tr>
 
         <tr>
-            <td>3:30 PM</td>
+            <th class="col1">3:00 PM</th>
             <td></td>
             <td></td>
             <td></td>
@@ -173,56 +164,7 @@
         </tr>
 
         <tr>
-            <td>4:00 PM</td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td rowspan="6">Physics I</td>
-            <td></td>
-        </tr>
-
-        <tr>
-            <td>4:30 PM</td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-        </tr>
-
-        <tr>
-            <td>5:00 PM</td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-        </tr>
-
-        <tr>
-            <td>5:30 PM</td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-        </tr>
-
-        <tr>
-            <td>6:00 PM</td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-        </tr>
-
-        <tr>
-            <td>6:30 PM</td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-        </tr>
-
-        <tr>
-            <td>7:00 PM</td>
+            <th class="col1">3:30 PM</th>
             <td></td>
             <td></td>
             <td></td>
@@ -231,7 +173,65 @@
         </tr>
 
         <tr>
-            <td>7:30 PM</td>
+            <th class="col1">4:00 PM</th>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td rowspan="6" class="phys">Physics I</td>
+            <td></td>
+        </tr>
+
+        <tr>
+            <th class="col1">4:30 PM</th>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+
+        <tr>
+            <th class="col1">5:00 PM</th>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+
+        <tr>
+            <th class="col1">5:30 PM</th>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+
+        <tr>
+            <th class="col1">6:00 PM</th>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+
+        <tr>
+            <th class="col1">6:30 PM</th>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+
+        <tr>
+            <th class="col1">7:00 PM</th>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+
+        <tr>
+            <th class="col1">7:30 PM</th>
             <td></td>
             <td></td>
             <td></td>
